Fix header z-index

--- a/src/app/Root/Header.module.scss
+++ b/src/app/Root/Header.module.scss
@@ -8,6 +8,7 @@
   position: sticky;
   top: 0;
   background: var(--cmm-color-surface-0);
+  z-index: 50;
 }
 
 .progressBar {
